header image fix

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex align-items-center justify-content-between">
-      <h1><a href="index.html"><img style="width: 80px; height: 80px;" src="../Anyar/assets/img/Shibarium ledger 3.png" /></a></h1>
-      <h1><a href="index.html"><img style="height: 80px; width: 180px;" src="../Anyar/assets/img/shibarium-ledger-3-7-2023 (1).png" /></a></h1>
+      <h1><a href="index.html"><img style="width: 80px; height: 80px;" src="./img/Shibarium ledger 3.png" /></a></h1>
+      <h1><a href="index.html"><img style="height: 80px; width: 180px;" src="./img/shibarium-ledger-3-7-2023 (1).png" /></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href=index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
