--- a/index.html
+++ b/index.html
@@ -156,15 +156,26 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-telegram"></i></div>
-              <h4 class="title"><a href="">Telegram</a></h4>
+              <h4 class="title"><a href="https://t.me/ShibariumLedgerERC">Telegram</a></h4>
               <p class="description"><b>Join us on Telegram</b></p>
             </div>
           </div>
 
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-telegram"></i></div>
+              <h4 class="title"><a href="https://twitter.com/ShibariumLedger">Twitter</a></h4>
+              <p class="description"><b>Join us on twitter</b></p>
+            </div>
+          </div>
+
+
+
+
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-graph-up-arrow"></i></div>
-              <h4 class="title"><a href="">Charts</a></h4>
+              <h4 class="title"><a href="https://www.dextools.io/app/en/ether/pair-explorer/0x977b3d4dba7f12ab6b301d6b5882b553f7af74d7">Charts</a></h4>
               <p class="description"><b>View Charts for more Information</b></p>
             </div>
           </div>
@@ -323,14 +334,14 @@
             <div class="icon-box">
               <i class="bi bi-card-checklist"></i>
               <h4><a href="#">Total Supply</a></h4>
-              <p>100 000 000 total</p>
+              <p><b>100,000,000 tokens</b></p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <i class="bi bi-bar-chart"></i>
               <h4><a href="#">Buy/Sell Tax</a></h4>
-              <p>3/3 tax</p>
+              <p><b>3/3 tax</b></p>
             </div>
           </div>
           </div>
@@ -341,42 +352,47 @@
       <div class="row">
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <i class="bi bi-binoculars"></i>
+              <i class="bi bi-1-circle-fill"></i>
               <h4><a href="#">Phase 1</a></h4>
               <p>Launch successful product that serves minimum 1 million customers by July 2021.</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
-              <i class="bi bi-brightness-high"></i>
+              <i class="bi bi-2-circle-fill"></i>
               <h4><a href="#">Phase 2</a></h4>
               <p>Complete growth optimization resulting in 20% increase in productivity by June 2022.</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
-              <i class="bi bi-calendar4-week"></i>
+              <i class="bi bi-3-circle-fill"></i>
               <h4><a href="#">Phase 3</a></h4>
               <p>Implement AI-driven automation to enhance customer experiences by May 2023.</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
-              <i class="bi bi-briefcase"></i>
+              <i class="bi bi-4-circle-fill"></i>
               <h4><a href="#">Phase 4</a></h4>
               <p> Establish partnerships with 5 strategic players within the same industry by December 2023</p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
-              <i class="bi bi-briefcase"></i>
+              <i class="bi bi-5-circle-fill"></i>
               <h4><a href="#">Phase 5</a></h4>
               <p> Move operations to multi-cloud environment to create cost savings of 25% by August 2023.</p>
             </div>
           </div>
-
+          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="600">
+          <div class="icon-box">
+            <i class="bi bi-6-circle-fill"></i>
+              <h4><a href="#">Phase 6</a></h4>
+              <p> Set up analytics platform enabling data-driven decision making for all critical processes by March 2024.</p>
+            </div>
+          </div>
         </div>
-
       </div>
     </section><!-- End Services Section -->
 
