--- a/index.html
+++ b/index.html
@@ -152,49 +152,34 @@
     <section id="icon-boxes" class="icon-boxes">
       <div class="container">
 
-        <div class="row" style="display: flex; justify-content: center;">
+        <div class="row" style="display: flex; justify-content: space-evenly;">
+
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
-            <div class="icon-box">
+            <div class="icon-box" style="width: 100%; display: flex; flex-direction: column;">
               <div class="icon"><i class="bi bi-telegram"></i></div>
+              <hr>
               <h4 class="title"><a href="https://t.me/ShibariumLedgerERC">Telegram</a></h4>
               <p class="description"><b>Join us on Telegram</b></p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
-            <div class="icon-box">
-              <div class="icon"><i class="bi bi-telegram"></i></div>
+            <div class="icon-box" style="width: 100%; display: flex; flex-direction: column;">
+              <div class="icon"><i class="bi bi-twitter"></i></div>
+              <hr>
               <h4 class="title"><a href="https://twitter.com/ShibariumLedger">Twitter</a></h4>
-              <p class="description"><b>Join us on twitter</b></p>
+              <p class="description"><b>Join us on Twitter</b></p>
             </div>
           </div>
 
-
-
-
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="width: 100%; display: flex; flex-direction: column;">
               <div class="icon"><i class="bi bi-graph-up-arrow"></i></div>
+              <hr>
               <h4 class="title"><a href="https://www.dextools.io/app/en/ether/pair-explorer/0x977b3d4dba7f12ab6b301d6b5882b553f7af74d7">Charts</a></h4>
               <p class="description"><b>View Charts for more Information</b></p>
             </div>
           </div>
-          <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div> -->
-
-          <!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div> -->
-
           
         </div>
 
@@ -330,25 +315,29 @@
         </div>
 
         <div class="row">
+
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box flex-grow-1">
               <i class="bi bi-card-checklist"></i>
               <h4><a href="#">Total Supply</a></h4>
               <p><b>100,000,000 tokens</b></p>
             </div>
           </div>
+
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
+            <div class="icon-box flex-grow-1">
               <i class="bi bi-bar-chart"></i>
               <h4><a href="#">Buy/Sell Tax</a></h4>
               <p><b>3/3 tax</b></p>
             </div>
           </div>
-          </div>
-          <div class="section-title">
-            <h2>Roadmap</h2>
-            <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-          </div>
+
+        </div>
+
+        <div class="section-title">
+          <h2>Roadmap</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
       <div class="row">
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
