--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="icon-box" style="width: 100%; display: flex; flex-direction: column;">
               <div class="icon"><i class="bi bi-telegram"></i></div>
               <hr>
-              <h4 class="title"><a href="https://t.me/ShibariumLedgerERC">Telegram</a></h4>
+              <h4 class="title"><a href="https://t.me/ShibariumLedgerERC" target="_blank">Telegram</a></h4>
               <p class="description"><b>Join us on Telegram</b></p>
             </div>
           </div>
@@ -167,7 +167,7 @@
             <div class="icon-box" style="width: 100%; display: flex; flex-direction: column;">
               <div class="icon"><i class="bi bi-twitter"></i></div>
               <hr>
-              <h4 class="title"><a href="https://twitter.com/ShibariumLedger">Twitter</a></h4>
+              <h4 class="title"><a href="https://twitter.com/ShibariumLedger" target="_blank">Twitter</a></h4>
               <p class="description"><b>Join us on Twitter</b></p>
             </div>
           </div>
@@ -176,7 +176,7 @@
             <div class="icon-box" style="width: 100%; display: flex; flex-direction: column;">
               <div class="icon"><i class="bi bi-graph-up-arrow"></i></div>
               <hr>
-              <h4 class="title"><a href="https://www.dextools.io/app/en/ether/pair-explorer/0x977b3d4dba7f12ab6b301d6b5882b553f7af74d7">Charts</a></h4>
+              <h4 class="title"><a href="https://www.dextools.io/app/en/ether/pair-explorer/0x977b3d4dba7f12ab6b301d6b5882b553f7af74d7" target="_blank">Charts</a></h4>
               <p class="description"><b>View Charts for more Information</b></p>
             </div>
           </div>
